# gmail-digest

./: .dockerignore  .envrc-example  .gitignore  .tool-versions  CHANGELOG.md  Makefile  TODO  docker-compose.yml  main.py  playground.py  pyproject.toml  readme.md
.github/workflows/: build_and_publish.yml  repo-sync.yml
gmail_digest/: __init__.py  util.py
